--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,12 @@
 Source: openstackx
 Section: python
 Priority: optional
-Maintainer: Andy Smith (termie)
+Maintainer: RCB Builder <rcb-deploy@lists.rackspace.com>
+XCBS-Original-Maintainer: Andy Smith (termie)
 Build-Depends: debhelper (>=7.0.50~), python-support (>= 0.6), cdbs (>= 0.4.49), python-all-dev, python-setuptools
 XS-Python-Version: >=2.5
 Standards-Version: 3.9.1
+XCBS-RCB-Component: diablod-d5
 
 Package: openstackx
 Architecture: all
@@ -13,8 +15,8 @@ XB-Python-Version: ${python:Versions}
 Depends: ${misc:Depends},
  openstack.compute,
  ${python:Depends}
-Description: Blah python module that adds blah and bleh
- Here you should put a long description your package. This line *MUST* (this is
- for default printing) begin with a single space.
- Look for more information about this.
+Description: Openstack extension modules
+ These are extension modules to the openstack API that
+ allow for various addition features beyond the openstack 1.1
+ API, including floating IP control, keypair management, etc.
 
