--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ XCBS-Original-Maintainer: Andy Smith (termie)
 Build-Depends: debhelper (>=7.0.50~), python-support (>= 0.6), cdbs (>= 0.4.49), python-all-dev, python-setuptools
 XS-Python-Version: >=2.5
 Standards-Version: 3.9.1
-XCBS-RCB-Component: diablo-d5
+XCBS-RCB-Component: diablo-final
 
 Package: openstackx
 Architecture: all
